# aoc24

./: .editorconfig  README.md
.zed/: settings.json
caoc24/: .clang-format  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
caoc24/.github/workflows/: ci.yml
caoc24/cmake/: dev-mode.cmake  docs-ci.cmake  install-rules.cmake  variables.cmake
caoc24/src/: lib.c
caoc24/test/: CMakeLists.txt
caoc24/test/source/: caoc24_test.c
luaaoc/: main.lua  utils.lua
luaaoc/days/: day1.lua  day7.lua
oxide/: Cargo.toml
oxide/src/: day1.rs  day13.rs  day14.rs  day2.rs  day3.rs  day7.rs  day9.rs  lib.rs  main.rs  utils.rs
py/: .neoconf.json  .nvim.lua  README.md  pyproject.toml
py/src/aoc24/: __init__.py  day1.py  day13.py  day14.py  day15.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day9.py
py/src/aoc24/utils/: __init__.py
zig/: day1.zig  utils.zig
