[package]
name = "aoc24rs"
version = "0.1.0"
authors = ["Arslan <rslnkrmt2552@gmail.com>"]
edition = "2021"

[lib]
name = "aoclib"
path = "src/lib.rs"

[[bin]]
name = "aoc24"
path = "src/main.rs"

[lints.rust]
dead_code = "allow"

[lints.clippy]
declare_interior_mutable_const = "allow"
borrow_interior_mutable_const = "allow"

[dependencies]
chumsky = "0.9.3"
itertools = "0.13.0"
pom = "3.4.0"
regex = "1.11.1"
