[project]
name = "aoc24"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Arslan", email = "rslnkrmt2552@gmail.com" }]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
# aoc24 = "aoc24:main"
d1p1 = "aoc24.day1:part1"
d1p2 = "aoc24.day1:part2"
d2p1 = "aoc24.day2:part1"
d2p2 = "aoc24.day2:part2"
d3p1 = "aoc24.day3:part1"
d3p2 = "aoc24.day3:part2"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "ipython>=8.30.0",
  "matplotlib>=3.9.3",
  "numpy>=2.1.3",
  "parsy>=2.1",
  "polars>=1.16.0",
  "seaborn>=0.13.2",
]
