[project]
name = "aoc24"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Arslan", email = "rslnkrmt2552@gmail.com" }]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
# aoc24 = "aoc24:main"
d1p1 = "aoc24.day1:part1"
d1p2 = "aoc24.day1:part2"
d2p1 = "aoc24.day2:part1"
d2p2 = "aoc24.day2:part2"
d3p1 = "aoc24.day3:part1"
d3p2 = "aoc24.day3:part2"
d4p1 = "aoc24.day4:part1"
d4p2 = "aoc24.day4:part2"
d5p1 = "aoc24.day5:part1"
d5p2 = "aoc24.day5:part2"
d6p1 = "aoc24.day6:part1"
d6p2 = "aoc24.day6:part2"
d7p1 = "aoc24.day7:part1"
d7p2 = "aoc24.day7:part2"
d8p1 = "aoc24.day8:part1"
d8p2 = "aoc24.day8:part2"
d9p1 = "aoc24.day9:part1"
d9p2 = "aoc24.day9:part2"
d13p1 = "aoc24.day13:part1"
d13p2 = "aoc24.day13:part2"
d14p1 = "aoc24.day14:part1"
d14p2 = "aoc24.day14:part2"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "ipython>=8.30.0",
  "matplotlib>=3.9.3",
  "numpy>=2.1.3",
  "parsy>=2.1",
  "polars>=1.16.0",
  "pyrefly>=0.38.2",
  "ruff>=0.14.1",
  "seaborn>=0.13.2",
  "ty>=0.0.1a23",
]

[tool.ruff]
line-length = 97
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "N", "A", "PL", "PERF", "RUF"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
